apps/routers/talos-related-routes/commitstew-staging/commitstew-com-ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: commitstew-com
  namespace: traefik-staging
spec:
  entryPoints:
    - websecure
  routes:
  - match: HostSNI(`giovanni.commitstew.com`) || HostSNI(`nwinter.commitstew.com`) || HostSNI(`alys.commitstew.com`) || HostSNI(`dan.commitstew.com`) || HostSNI(`xenocid.commitstew.com`) || HostSNI(`jordan.commitstew.com`) || HostSNI(`alys.commitstew.com`) || HostSNI(`dan.commitstew.com`) || HostSNI(`xenocid.commitstew.com`) || HostSNI(`jordan.commitstew.com`) || HostSNI(`brian.commitstew.com`) || HostSNI(`nick.commitstew.com`) || HostSNI(`alex.commitstew.com`) || HostSNI(`clarissa.commitstew.co [...]
    services:
    - name: commitstew-com
      namespace: traefik-staging
      port: 443
  tls:
    passthrough: true
